--- a/WoofWare.WeakHashTable/WoofWare.WeakHashTable.fsproj
+++ b/WoofWare.WeakHashTable/WoofWare.WeakHashTable.fsproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
+      <TargetFramework>netstandard2.0</TargetFramework>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <Authors>PatrickStevens</Authors>
       <Copyright>Copyright (c) Patrick Stevens 2025</Copyright>
