--- a/WoofWare.WeakHashTable/WoofWare.WeakHashTable.fsproj
+++ b/WoofWare.WeakHashTable/WoofWare.WeakHashTable.fsproj
@@ -9,7 +9,7 @@
       <RepositoryType>git</RepositoryType>
       <RepositoryUrl>https://github.com/Smaug123/WoofWare.WeakHashTable</RepositoryUrl>
       <PackageLicenseExpression>MIT</PackageLicenseExpression>
-      <PackageIcon>light.jpg</PackageIcon>
+      <PackageIcon>light.png</PackageIcon>
       <PackageReadmeFile>README.md</PackageReadmeFile>
       <PackageTags>hash_table;weak_pointer;core_kernel;ocaml</PackageTags>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -24,7 +24,7 @@
         <Pack>True</Pack>
         <PackagePath>\</PackagePath>
       </None>
-      <None Include="..\logos\light.jpg">
+      <None Include="..\logos\light.png">
         <Pack>True</Pack>
         <PackagePath>\</PackagePath>
       </None>
