--- a/WoofWare.WeakHashTable/WoofWare.WeakHashTable.fsproj
+++ b/WoofWare.WeakHashTable/WoofWare.WeakHashTable.fsproj
@@ -9,6 +9,7 @@
       <RepositoryType>git</RepositoryType>
       <RepositoryUrl>https://github.com/Smaug123/WoofWare.WeakHashTable</RepositoryUrl>
       <PackageLicenseExpression>MIT</PackageLicenseExpression>
+      <PackageIcon>light.png</PackageIcon>
       <PackageReadmeFile>README.md</PackageReadmeFile>
       <PackageTags>hash_table;weak_pointer;core_kernel;ocaml</PackageTags>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -20,6 +21,10 @@
       <EmbeddedResource Include="SurfaceBaseline.txt" />
       <EmbeddedResource Include="../version.json" />
       <None Include="..\README.md">
+        <Pack>True</Pack>
+        <PackagePath>\</PackagePath>
+      </None>
+      <None Include="..\logos\light.png">
         <Pack>True</Pack>
         <PackagePath>\</PackagePath>
       </None>
